--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,34 @@ h1 {
 nav {
   display: block;
 }
+
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.center {
+  /*margin: 0;*/
+  position: relative;
+  /*top: 45%;*/
+  /*left: 0%;*/
+  /*-ms-transform: translate(-50%, -50%);*/
+  /*transform: translate(-50%, -50%);*/
+}
+
+button {
+  border: 1px solid lightgray;
+  background-color: transparent;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+button:focus {
+  outline:5px;
+}
